[package]
name = "ExternalInterface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "*"#:C++_FFL>
jni = "*"#:java_Fll>
anyhow = "*"#:Resultj兼容处理>
thiserror = "*"#:错误指定>
#+++++++++++++++build+++++++++++++++++++++++
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"
[profile.dev]
codegen-units = 24
#发布配置
[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true
[target.'cfg(target_os = "linux")'.dependencies]
cpython = "*"#:python(Liunx)>
j4rs = "*"#:Java
nats = "*"#:NATS>
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "*", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }